[TECH][lyn]完成